fix gap in splide review

--- a/src/style/_reviews.sass
+++ b/src/style/_reviews.sass
@@ -5,7 +5,7 @@
         margin: 0 auto
 
     & .splide__list
-        column-gap: 6.197917vw
+        // column-gap: 1vw
 
     & .splide__arrows
         position: absolute
